Change svm and tree.

--- a/lab2/svm.ipynb
+++ b/lab2/svm.ipynb
@@ -2,21 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "electrical-knitting",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "from sklearn import svm\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.metrics import accuracy_score"
+    "from sklearn.metrics import accuracy_score, roc_auc_score\n",
+    "from sklearn.metrics import classification_report"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "stretch-protocol",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,8 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "whole-uruguay",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,9 +36,226 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "nutritional-participant",
+   "execution_count": 20,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>RefId</th>\n",
+       "      <th>IsBadBuy</th>\n",
+       "      <th>PurchDate</th>\n",
+       "      <th>Auction</th>\n",
+       "      <th>VehYear</th>\n",
+       "      <th>VehicleAge</th>\n",
+       "      <th>Make</th>\n",
+       "      <th>Model</th>\n",
+       "      <th>Trim</th>\n",
+       "      <th>SubModel</th>\n",
+       "      <th>...</th>\n",
+       "      <th>MMRCurrentRetailAveragePrice</th>\n",
+       "      <th>MMRCurrentRetailCleanPrice</th>\n",
+       "      <th>PRIMEUNIT</th>\n",
+       "      <th>AUCGUART</th>\n",
+       "      <th>BYRNO</th>\n",
+       "      <th>VNZIP1</th>\n",
+       "      <th>VNST</th>\n",
+       "      <th>VehBCost</th>\n",
+       "      <th>IsOnlineSale</th>\n",
+       "      <th>WarrantyCost</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>12/7/2009</td>\n",
+       "      <td>ADESA</td>\n",
+       "      <td>2006</td>\n",
+       "      <td>3</td>\n",
+       "      <td>MAZDA</td>\n",
+       "      <td>MAZDA3</td>\n",
+       "      <td>i</td>\n",
+       "      <td>4D SEDAN I</td>\n",
+       "      <td>...</td>\n",
+       "      <td>11597.0</td>\n",
+       "      <td>12409.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>21973</td>\n",
+       "      <td>33619</td>\n",
+       "      <td>FL</td>\n",
+       "      <td>7100.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1113</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>12/7/2009</td>\n",
+       "      <td>ADESA</td>\n",
+       "      <td>2004</td>\n",
+       "      <td>5</td>\n",
+       "      <td>DODGE</td>\n",
+       "      <td>1500 RAM PICKUP 2WD</td>\n",
+       "      <td>ST</td>\n",
+       "      <td>QUAD CAB 4.7L SLT</td>\n",
+       "      <td>...</td>\n",
+       "      <td>11374.0</td>\n",
+       "      <td>12791.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>19638</td>\n",
+       "      <td>33619</td>\n",
+       "      <td>FL</td>\n",
+       "      <td>7600.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1053</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>12/7/2009</td>\n",
+       "      <td>ADESA</td>\n",
+       "      <td>2005</td>\n",
+       "      <td>4</td>\n",
+       "      <td>DODGE</td>\n",
+       "      <td>STRATUS V6</td>\n",
+       "      <td>SXT</td>\n",
+       "      <td>4D SEDAN SXT FFV</td>\n",
+       "      <td>...</td>\n",
+       "      <td>7146.0</td>\n",
+       "      <td>8702.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>19638</td>\n",
+       "      <td>33619</td>\n",
+       "      <td>FL</td>\n",
+       "      <td>4900.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1389</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>12/7/2009</td>\n",
+       "      <td>ADESA</td>\n",
+       "      <td>2004</td>\n",
+       "      <td>5</td>\n",
+       "      <td>DODGE</td>\n",
+       "      <td>NEON</td>\n",
+       "      <td>SXT</td>\n",
+       "      <td>4D SEDAN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>4375.0</td>\n",
+       "      <td>5518.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>19638</td>\n",
+       "      <td>33619</td>\n",
+       "      <td>FL</td>\n",
+       "      <td>4100.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>630</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>12/7/2009</td>\n",
+       "      <td>ADESA</td>\n",
+       "      <td>2005</td>\n",
+       "      <td>4</td>\n",
+       "      <td>FORD</td>\n",
+       "      <td>FOCUS</td>\n",
+       "      <td>ZX3</td>\n",
+       "      <td>2D COUPE ZX3</td>\n",
+       "      <td>...</td>\n",
+       "      <td>6739.0</td>\n",
+       "      <td>7911.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>19638</td>\n",
+       "      <td>33619</td>\n",
+       "      <td>FL</td>\n",
+       "      <td>4000.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1020</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 34 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   RefId  IsBadBuy  PurchDate Auction  VehYear  VehicleAge   Make  \\\n",
+       "0      1         0  12/7/2009   ADESA     2006           3  MAZDA   \n",
+       "1      2         0  12/7/2009   ADESA     2004           5  DODGE   \n",
+       "2      3         0  12/7/2009   ADESA     2005           4  DODGE   \n",
+       "3      4         0  12/7/2009   ADESA     2004           5  DODGE   \n",
+       "4      5         0  12/7/2009   ADESA     2005           4   FORD   \n",
+       "\n",
+       "                 Model Trim           SubModel  ...  \\\n",
+       "0               MAZDA3    i         4D SEDAN I  ...   \n",
+       "1  1500 RAM PICKUP 2WD   ST  QUAD CAB 4.7L SLT  ...   \n",
+       "2           STRATUS V6  SXT   4D SEDAN SXT FFV  ...   \n",
+       "3                 NEON  SXT           4D SEDAN  ...   \n",
+       "4                FOCUS  ZX3       2D COUPE ZX3  ...   \n",
+       "\n",
+       "  MMRCurrentRetailAveragePrice MMRCurrentRetailCleanPrice  PRIMEUNIT AUCGUART  \\\n",
+       "0                      11597.0                    12409.0        NaN      NaN   \n",
+       "1                      11374.0                    12791.0        NaN      NaN   \n",
+       "2                       7146.0                     8702.0        NaN      NaN   \n",
+       "3                       4375.0                     5518.0        NaN      NaN   \n",
+       "4                       6739.0                     7911.0        NaN      NaN   \n",
+       "\n",
+       "   BYRNO VNZIP1 VNST VehBCost  IsOnlineSale  WarrantyCost  \n",
+       "0  21973  33619   FL   7100.0             0          1113  \n",
+       "1  19638  33619   FL   7600.0             0          1053  \n",
+       "2  19638  33619   FL   4900.0             0          1389  \n",
+       "3  19638  33619   FL   4100.0             0           630  \n",
+       "4  19638  33619   FL   4000.0             0          1020  \n",
+       "\n",
+       "[5 rows x 34 columns]"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -337,7 +552,7 @@
        "max        1.000000   7498.000000  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -347,21 +562,162 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Оставила только возраст машины, ее марку, сколько она проехала, стоимость машины и гарантии. PRIMEUNIT и AUCGUART решила не рассматривать, так как nan составляют 98% от датасета, поэтому даже если все nan заменим на новое значение (как было на семинарах) сильного влияния не будет."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "mighty-giant",
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X = data.loc[:, [nameX, nameY]]\n",
-    "Y = data.loc[:, nameZ]\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, Y, train_size=0.2, test_size=0.2, random_state=20)"
+    "names = ['VehicleAge', 'Make', 'VehOdo', 'VehBCost', 'WarrantyCost']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = data[names]\n",
+    "Y = data['IsBadBuy']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 72983 entries, 0 to 72982\n",
+      "Data columns (total 5 columns):\n",
+      " #   Column        Non-Null Count  Dtype  \n",
+      "---  ------        --------------  -----  \n",
+      " 0   VehicleAge    72983 non-null  int64  \n",
+      " 1   Make          72983 non-null  object \n",
+      " 2   VehOdo        72983 non-null  int64  \n",
+      " 3   VehBCost      72983 non-null  float64\n",
+      " 4   WarrantyCost  72983 non-null  int64  \n",
+      "dtypes: float64(1), int64(3), object(1)\n",
+      "memory usage: 2.8+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "X.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = pd.get_dummies(X, columns=[\"Make\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 72983 entries, 0 to 72982\n",
+      "Data columns (total 37 columns):\n",
+      " #   Column             Non-Null Count  Dtype  \n",
+      "---  ------             --------------  -----  \n",
+      " 0   VehicleAge         72983 non-null  int64  \n",
+      " 1   VehOdo             72983 non-null  int64  \n",
+      " 2   VehBCost           72983 non-null  float64\n",
+      " 3   WarrantyCost       72983 non-null  int64  \n",
+      " 4   Make_ACURA         72983 non-null  uint8  \n",
+      " 5   Make_BUICK         72983 non-null  uint8  \n",
+      " 6   Make_CADILLAC      72983 non-null  uint8  \n",
+      " 7   Make_CHEVROLET     72983 non-null  uint8  \n",
+      " 8   Make_CHRYSLER      72983 non-null  uint8  \n",
+      " 9   Make_DODGE         72983 non-null  uint8  \n",
+      " 10  Make_FORD          72983 non-null  uint8  \n",
+      " 11  Make_GMC           72983 non-null  uint8  \n",
+      " 12  Make_HONDA         72983 non-null  uint8  \n",
+      " 13  Make_HUMMER        72983 non-null  uint8  \n",
+      " 14  Make_HYUNDAI       72983 non-null  uint8  \n",
+      " 15  Make_INFINITI      72983 non-null  uint8  \n",
+      " 16  Make_ISUZU         72983 non-null  uint8  \n",
+      " 17  Make_JEEP          72983 non-null  uint8  \n",
+      " 18  Make_KIA           72983 non-null  uint8  \n",
+      " 19  Make_LEXUS         72983 non-null  uint8  \n",
+      " 20  Make_LINCOLN       72983 non-null  uint8  \n",
+      " 21  Make_MAZDA         72983 non-null  uint8  \n",
+      " 22  Make_MERCURY       72983 non-null  uint8  \n",
+      " 23  Make_MINI          72983 non-null  uint8  \n",
+      " 24  Make_MITSUBISHI    72983 non-null  uint8  \n",
+      " 25  Make_NISSAN        72983 non-null  uint8  \n",
+      " 26  Make_OLDSMOBILE    72983 non-null  uint8  \n",
+      " 27  Make_PLYMOUTH      72983 non-null  uint8  \n",
+      " 28  Make_PONTIAC       72983 non-null  uint8  \n",
+      " 29  Make_SATURN        72983 non-null  uint8  \n",
+      " 30  Make_SCION         72983 non-null  uint8  \n",
+      " 31  Make_SUBARU        72983 non-null  uint8  \n",
+      " 32  Make_SUZUKI        72983 non-null  uint8  \n",
+      " 33  Make_TOYOTA        72983 non-null  uint8  \n",
+      " 34  Make_TOYOTA SCION  72983 non-null  uint8  \n",
+      " 35  Make_VOLKSWAGEN    72983 non-null  uint8  \n",
+      " 36  Make_VOLVO         72983 non-null  uint8  \n",
+      "dtypes: float64(1), int64(3), uint8(33)\n",
+      "memory usage: 4.5 MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "X.info()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "bacterial-condition",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "names = ['VehicleAge', 'VehOdo', 'VehBCost', 'WarrantyCost']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in names:\n",
+    "    max_val = max(X[i])\n",
+    "    X[i] = X[i] / max_val"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(X, Y, test_size=0.3, random_state=20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -370,7 +726,7 @@
        "SVC()"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -382,8 +738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "fundamental-provision",
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -392,23 +747,137 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "advisory-great",
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.8806604096732206"
+       "0.8779630052523407"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "accuracy_score(pred, y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.88      1.00      0.94     19223\n",
+      "           1       0.00      0.00      0.00      2672\n",
+      "\n",
+      "    accuracy                           0.88     21895\n",
+      "   macro avg       0.44      0.50      0.47     21895\n",
+      "weighted avg       0.77      0.88      0.82     21895\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/crytox/anaconda3/lib/python3.8/site-packages/sklearn/metrics/_classification.py:1221: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(classification_report(y_test, pred))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "По-разному пыталась играть с параметрами, лучше всего единички предсказывались только в этом случае."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "SVC(class_weight='balanced')"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "alg = svm.SVC(class_weight='balanced')\n",
+    "alg.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pred = alg.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6362183146837177"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "accuracy_score(pred, y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.92      0.64      0.76     19223\n",
+      "           1       0.19      0.59      0.28      2672\n",
+      "\n",
+      "    accuracy                           0.64     21895\n",
+      "   macro avg       0.55      0.62      0.52     21895\n",
+      "weighted avg       0.83      0.64      0.70     21895\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(classification_report(y_test, pred))"
    ]
   }
  ],
@@ -428,7 +897,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.6"
   }
  },
  "nbformat": 4,
