--- a/lab2/tree.ipynb
+++ b/lab2/tree.ipynb
@@ -2,21 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "hired-atlanta",
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "from sklearn import tree\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.metrics import accuracy_score"
+    "from sklearn.metrics import accuracy_score, roc_auc_score\n",
+    "from sklearn.metrics import classification_report"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "european-roberts",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,8 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "violent-smell",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,8 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "motivated-privacy",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -337,7 +334,7 @@
        "max        1.000000   7498.000000  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -347,21 +344,100 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "athletic-thong",
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "X = data.loc[:, [nameX, nameY]]\n",
-    "Y = data.loc[:, nameZ]\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, Y, train_size=0.01, test_size=0.01, random_state=20)"
+    "Оставила только возраст машины, ее марку, сколько она проехала, стоимость машины и гарантии. PRIMEUNIT и AUCGUART решила не рассматривать, так как nan составляют 98% от датасета, поэтому даже если все nan заменим на новое значение (как было на семинарах) сильного влияния не будет."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "willing-concert",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "names = ['VehicleAge', 'Make', 'VehOdo', 'VehBCost', 'WarrantyCost']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = data[names]\n",
+    "Y = data['IsBadBuy']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 72983 entries, 0 to 72982\n",
+      "Data columns (total 5 columns):\n",
+      " #   Column        Non-Null Count  Dtype  \n",
+      "---  ------        --------------  -----  \n",
+      " 0   VehicleAge    72983 non-null  int64  \n",
+      " 1   Make          72983 non-null  object \n",
+      " 2   VehOdo        72983 non-null  int64  \n",
+      " 3   VehBCost      72983 non-null  float64\n",
+      " 4   WarrantyCost  72983 non-null  int64  \n",
+      "dtypes: float64(1), int64(3), object(1)\n",
+      "memory usage: 2.8+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "X.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = pd.get_dummies(X, columns=[\"Make\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "names = ['VehicleAge', 'VehOdo', 'VehBCost', 'WarrantyCost']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in names:\n",
+    "    max_val = max(X[i])\n",
+    "    X[i] = X[i] / max_val"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(X, Y, test_size=0.3, random_state=20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -370,7 +446,7 @@
        "DecisionTreeClassifier()"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -382,8 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "incredible-complexity",
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -392,32 +467,163 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "primary-provincial",
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.7849315068493151"
+       "0.7841973053208495"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "accuracy_score(pred, y_test)"
+    "accuracy_score(y_test, pred)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "incomplete-milwaukee",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.88      0.87      0.88     19223\n",
+      "           1       0.16      0.18      0.17      2672\n",
+      "\n",
+      "    accuracy                           0.78     21895\n",
+      "   macro avg       0.52      0.52      0.52     21895\n",
+      "weighted avg       0.80      0.78      0.79     21895\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(classification_report(y_test, pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5245802028570441"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "roc_auc_score(y_test, pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DecisionTreeClassifier(class_weight='balanced', max_depth=20)"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "alg = tree.DecisionTreeClassifier(max_depth=20, class_weight='balanced')\n",
+    "alg.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "pred = alg.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7154144781913679"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "accuracy_score(y_test, pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.89      0.77      0.83     19223\n",
+      "           1       0.17      0.33      0.22      2672\n",
+      "\n",
+      "    accuracy                           0.72     21895\n",
+      "   macro avg       0.53      0.55      0.52     21895\n",
+      "weighted avg       0.80      0.72      0.75     21895\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(classification_report(y_test, pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5504989345036713"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "roc_auc_score(y_test, pred)"
+   ]
   }
  ],
  "metadata": {
@@ -436,7 +642,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.6"
   }
  },
  "nbformat": 4,
