--- a/lab2/random_forest.ipynb
+++ b/lab2/random_forest.ipynb
@@ -2,12 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.ensemble import RandomForestClassifier\n",
     "import pandas as pd\n",
+    "import numpy as np\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import accuracy_score, roc_auc_score\n",
     "from sklearn.metrics import classification_report"
@@ -15,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,11 +109,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "X_train, X_test, y_train, y_test = train_test_split(X, Y, test_size=0.3, random_state=20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "RandomForestClassifier(class_weight='balanced_subsample', max_depth=18,\n",
+       "                       n_estimators=500, n_jobs=-1)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "alg = RandomForestClassifier(max_depth=18, n_estimators=500, n_jobs=-1, class_weight='balanced_subsample')\n",
+    "alg.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pred = alg.predict_proba(X_test)\n",
+    "predictionClass = np.array([1 if pred[i][1] > 0.4 else 0 for i in range(pred.shape[0])])"
    ]
   },
   {
@@ -123,8 +156,7 @@
     {
      "data": {
       "text/plain": [
-       "RandomForestClassifier(class_weight='balanced_subsample', max_depth=13,\n",
-       "                       n_jobs=-1)"
+       "0.6984699703128568"
       ]
      },
      "execution_count": 28,
@@ -133,42 +165,12 @@
     }
    ],
    "source": [
-    "alg = RandomForestClassifier(max_depth=13, n_estimators=100, n_jobs=-1, class_weight='balanced_subsample')\n",
-    "alg.fit(X_train, y_train)"
+    "accuracy_score(y_test, predictionClass)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 29,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pred = alg.predict(X_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.7251427266499201"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "accuracy_score(y_test, pred)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -177,18 +179,18 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.91      0.77      0.83     19223\n",
-      "           1       0.21      0.44      0.28      2672\n",
+      "           0       0.91      0.73      0.81     19223\n",
+      "           1       0.19      0.45      0.27      2672\n",
       "\n",
-      "    accuracy                           0.73     21895\n",
-      "   macro avg       0.56      0.60      0.55     21895\n",
-      "weighted avg       0.82      0.73      0.76     21895\n",
+      "    accuracy                           0.70     21895\n",
+      "   macro avg       0.55      0.59      0.54     21895\n",
+      "weighted avg       0.82      0.70      0.74     21895\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "print(classification_report(y_test, pred))"
+    "print(classification_report(y_test, predictionClass))"
    ]
   }
  ],
@@ -208,7 +210,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
